Play/Pause button now a module

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,7 @@
 </head>
 
 <body>
-    <div id="player">
-        <button id="play-button">Play</button>
-    </div>
+    <div id="player"></div>
     <script src="player.js"></script>
 </body>
 
