Making module from webpack, and putting the test script into the HTML

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,19 @@
 <body>
     <div id="player"></div>
     <script src="player.js"></script>
+    <script>
+    let player = new AudioPlayer.Player('file.mp3');
+    let root = document.getElementById('player');
+
+    let renderers = [
+        new AudioPlayer.Renderers.PlayPauseButtonRenderer(root, player),
+        new AudioPlayer.Renderers.ProgressbarRenderer(root, player),
+        new AudioPlayer.Renderers.TimestampRenderer(root, player)
+    ];
+
+    let render = new AudioPlayer.Layouts.BootstrapGridRendererGroup(root, player, renderers);
+    player.setRenderer(render);
+    </script>
 </body>
 
 </html>
